src/objects/CB_Panel__c.object
<CustomObject>
    <description>AstrumPM - Circuit Breaker Panel - This is an object to keep track of the panels available on a utility service to which System Design Arrays can be attached.</description>
    <fields>
        <fullName>Bus_Rating_Amps__c</fullName>
        <description>What Current is This Panel&apos;s Bus Rated For</description>
        <inlineHelpText>What Current is This Panel&apos;s Bus Rated For?</inlineHelpText>
        <label>Bus Rating (Amps)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Open_Circuits__c</fullName>
        <description>Number of Open Circuits in CB Panel available</description>
        <label>Count of Open Circuits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Breaker_Rating_Amps__c</fullName>
        <description>What Current is This Panel&apos;s Main Breaker Rated For</description>
        <inlineHelpText>What Current is This Panel&apos;s Main Breaker Rated For?</inlineHelpText>
        <label>Main Breaker Rating (Amps)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Available_Solar_Connection__c</fullName>
        <formula>(Bus_Rating_Amps__c * 1.2) -  Main_Breaker_Rating_Amps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Available Solar Connection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Required_Solar_Available_Amps__c</fullName>
        <label>Minimum Required Solar Available Amps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Location__c</fullName>
        <description>Where is this CB Panel Located?</description>
        <inlineHelpText>Where is this CB Panel Located?</inlineHelpText>
        <label>Panel Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_CB_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent CB Panel</label>
        <referenceTo>CB_Panel__c</referenceTo>
        <relationshipLabel>CB Panels</relationshipLabel>
        <relationshipName>CB_Panels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <description>Property Where This CB Panel is Located</description>
        <formula>HYPERLINK( Utility_Service__r.Property__r.Id , Utility_Service__r.Property__r.Name )</formula>
        <inlineHelpText>Property Where This CB Panel is Located</inlineHelpText>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Required__c</fullName>
        <formula>IF( Minimum_Required_Solar_Available_Amps__c &gt;  Maximum_Available_Solar_Connection__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Valid__c</fullName>
        <formula>IF( Minimum_Required_Solar_Available_Amps__c  &gt;  Upgraded_Maximum_Available_Solar_Connect__c , FALSE , TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgraded_Bus_Rating__c</fullName>
        <formula>IF(Upgrade_Required__c , IF( Bus_Rating_Amps__c &lt;= 225 , 225 , Bus_Rating_Amps__c ),NULL)</formula>
        <label>Upgraded Bus Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgraded_Main_Breaker_Rating__c</fullName>
        <formula>IF( Upgraded_Bus_Rating__c == NULL, NULL , IF(Upgraded_Bus_Rating__c == 225 , IF (Main_Breaker_Rating_Amps__c  &lt;= 150 , 150 ,  Main_Breaker_Rating_Amps__c ), Main_Breaker_Rating_Amps__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgraded Main Breaker Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgraded_Maximum_Available_Solar_Connect__c</fullName>
        <formula>( Upgraded_Bus_Rating__c * 1.2) -  Upgraded_Main_Breaker_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgraded Maximum Available Solar Connect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Service__c</fullName>
        <description>Meter ID of the Utility Service This CB Panel is connected to.</description>
        <inlineHelpText>Meter ID of the Utility Service This CB Panel is connected to.</inlineHelpText>
        <label>Meter ID</label>
        <referenceTo>Utility_Service__c</referenceTo>
        <relationshipLabel>CB Panels</relationshipLabel>
        <relationshipName>CB_Panels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CB Panel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>